name:                xlsior
version:             0.1.1.0
synopsis:            Streaming Excel file generation and parsing
description:         Streaming Excel file generation and parsing
license:             MIT
license-file:        LICENSE
author:              rcallahan
maintainer:          ropoctl@gmail.com
copyright:           2014-2015
category:            Codec
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Xlsx.Writer
                     , Xlsx.Sheet
                     , Xlsx.Parse
                     , Xlsx.Types
  other-modules:       Xlsx.Types.Internal
                     , Xlsx.Types.Class
                     , Xlsx.Types.Instances
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.7 && <5
                     , zip-archive
                     , blaze-markup
                     , text
                     , bytestring
                     , time
                     , vector
                     , conduit
                     , xml-conduit
                     , data-default
                     , exceptions
                     , conduit-extra
                     , resourcet
                     , xml-types
                     , mtl
                     , attoparsec
                     , scientific
                     , time-locale-compat
  default-language:    Haskell2010
  ghc-options:         -Wall
  ghc-prof-options:    -fprof-auto

Test-Suite test
  main-is:             Test.hs
  other-modules:       Xlsx.Sheet
                     , Xlsx.Types
                     , Xlsx.Types.Class
                     , Xlsx.Types.Instances
                     , Xlsx.Types.Internal
                     , Xlsx.Writer

  type:                exitcode-stdio-1.0
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.7 && <5
                     , xlsior
                     , bytestring
                     , blaze-markup
                     , mtl
                     , scientific
                     , text
                     , time
                     , time-locale-compat
                     , vector
                     , zip-archive
  default-language:    Haskell2010
  ghc-options:         -Wall
  ghc-prof-options:    -fprof-auto
